feature /added-pagination and filters

--- a/ProjectManagement/Views/Project/Assign.cshtml
+++ b/ProjectManagement/Views/Project/Assign.cshtml
@@ -44,6 +44,7 @@
                                     <td>@assignment.User.FullName</td>
                                     <td>@assignment.Role</td>
                                     <td>
+                                        <!-- need to check here if it is assigned as -->
                                         <span class="badge bg-primary">Regular</span>
                                     </td>
                                     <td>
