Added Soft Delete in worklogs

--- a/ProjectManagement/Views/Worklog/Project.cshtml
+++ b/ProjectManagement/Views/Worklog/Project.cshtml
@@ -123,12 +123,20 @@
                                 <td>${log.description}</td>
                                 <td>
                                     <div class="btn-group">
-                                        <a href="/Worklog/Edit/${log.id}" class="btn btn-sm btn-outline-primary">
-                                            <i class="bi bi-pencil"></i>
-                                        </a>
-                                        <a href="/Worklog/Delete/${log.id}" class="btn btn-sm btn-outline-danger">
-                                            <i class="bi bi-trash"></i>
-                                        </a>
+                                    <form method="post" action="/Worklog/Edit/${log.id}" style="display:inline;">
+                                                    @Html.AntiForgeryToken()
+                                                    <button type="submit" class="btn btn-sm btn-outline-primary">
+                                                         <i class="bi bi-pencil"></i>
+                                                    </button>
+                                      </form>
+                                        
+                                     <form method="post" action="/Worklog/Delete/${log.id}" style="display:inline;">
+                                                    @Html.AntiForgeryToken()
+                                                    <button type="submit" class="btn btn-sm btn-outline-danger">
+                                                        <i class="bi bi-trash"></i>
+                                                    </button>
+                                      </form>
+                                       
                                     </div>
                                 </td>
                             </tr>`;
